force-app/main/default/objects/GPMS_PA_Variation_History__c/GPMS_PA_Variation_History__c.object-meta.xml
<CustomObject>
    <label>PA Variation History</label>
    <nameField>
        <displayFormat>PAV-{00000000}</displayFormat>
        <label>PA Variation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PA Variation History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>