force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/DateOfAdviceFromProvider__c.field-meta.xml
<CustomField>
    <fullName>DateOfAdviceFromProvider__c</fullName>
    <label>Date of Advice from Provider</label>
    <type>Date</type>
</CustomField>