force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Comment_on_Decision__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comment_on_Decision__c</fullName>
    <label>Comment on Decision</label>
    <type>TextArea</type>
</CustomField>