force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>