force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Decision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Decision_Due_Date__c</fullName>
    <label>Decision Due Date</label>
    <type>Date</type>
</CustomField>