force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Delegate_Position__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Delegate_Position__c</fullName>
    <label>Delegate Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>