force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Delegate_State__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Delegate_State__c</fullName>
    <label>Delegate State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>