force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Event__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>PA Variation History</relationshipLabel>
    <relationshipName>PA_Variation_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>