force-app/main/default/objects/GPMS_PA_Variation_History__c/fields/GPMS_Is_Acting_in_Position__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Is_Acting_in_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>