force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/Activate_PA.recordType-meta.xml
<RecordType>
    <fullName>Activate_PA</fullName>
    <active>true</active>
    <description>Activate of PA Variation</description>
    <label>Activate</label>
</RecordType>