force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_AAT_Decision_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_AAT_Decision_PA</fullName>
    <active>true</active>
    <description>AAT Decision of PA Variation</description>
    <label>AAT Decision</label>
</RecordType>