force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Cancel_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Cancel_PA</fullName>
    <active>true</active>
    <description>Cancel of PA Variation</description>
    <label>Cancel</label>
</RecordType>