force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Change_Variation_Day_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Change_Variation_Day_PA</fullName>
    <active>true</active>
    <label>Change Variation Day</label>
</RecordType>