force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Decision_on_Request_for_Reconsideration_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Decision_on_Request_for_Reconsideration_PA</fullName>
    <active>true</active>
    <description>Decision on Request for Reconsideration of PA Variation</description>
    <label>Decision on Request for Reconsideration</label>
</RecordType>