force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Decision_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Decision_PA</fullName>
    <active>true</active>
    <description>Record Decision of PA Variation</description>
    <label>Decision</label>
</RecordType>