force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Request_for_Reconsideration_by_the_AAT_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Request_for_Reconsideration_by_the_AAT_PA</fullName>
    <active>true</active>
    <description>Request for Reconsideration by the AAT of PA Variation</description>
    <label>Request for Reconsideration by the AAT</label>
</RecordType>