force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Request_for_Reconsideration_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Request_for_Reconsideration_PA</fullName>
    <active>true</active>
    <description>Record Request for Reconsideration of PA Variation</description>
    <label>Request for Reconsideration</label>
</RecordType>