force-app/main/default/objects/GPMS_PA_Variation_History__c/recordTypes/GPMS_Withdraw_PA.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Withdraw_PA</fullName>
    <active>true</active>
    <description>Withdraw of PA Variation</description>
    <label>Withdraw</label>
</RecordType>