force-app/main/default/objects/GPMS_PA_Variation_History__c/validationRules/PA_ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>PA_ServiceCombineLock</fullName>
    <active>true</active>
    <description>This used to lock the record during the service combine process.</description>
    <errorConditionFormula>GPMS_Event__r.Service__r.GPMS_CombineLock__c</errorConditionFormula>
    <errorMessage>This service is being combined. Related records cannot be changed.</errorMessage>
</ValidationRule>